*Empty MediaWiki Message*

--- a/Ooshiyaaniya.mw
+++ b/Ooshiyaaniya.mw
@@ -1,4 +1,6 @@
-[[Image:LocationOceania.png|thumb|right|300px|Ooshiyaaniya]]
+[[Image:LocationOceania.png|thumb|right|300px|Ooshiyaaniya]]    
+== [[Headline text]]'''''Italic text''''' ==  waxaad ku soo kor disaan bar naamijkaan gaarka ah hdalka looga had layo guurka raga iyo dumar oo la iskugu soo gudbiyo wab sayt yada sida bar naa mish ka guur doon oo ah xubin ta ugu muhiim san ee ka maqan bar naamisk kan koley si wal baba ha ahaato ee waxaan oga hay in uu yahay bar naa mish kaan mid looga hadlo wax yaabaha quseeya qaf walba oo rabta in ay ogaato qaardaha caalamka iyo ku wa dal keeda somaliya qaf walbo oo jece in uu ogaado wax walba oo dunida kajira waxa uu kala socan karaa had iyo jeeraale bar naamiskaan oo aha mid loo diyaariyay dhaman dadka dunida dacladeeda ku nool sidaa darteed waxaan ku fiki ray in aad wax igal socod siisaan bar naamish kan oo ah mid aad loo xiiseeya 
+
 *Australie
 *Nouvelle-Zélande
 
@@ -8,7 +10,7 @@
 [[ar:أوقيانوسيا]]
 [[as:ওচেনিয়া]]
 [[ast:Oceanía]]
-[[az:Okeaniya]]
+[[az:Okeaniya]]w
 [[bat-smg:Okeanėjė]]
 [[bcl:Osyanya]]
 [[be-x-old:Акіянія]]
