--- a/Diseembar.mw
+++ b/Diseembar.mw
@@ -27,6 +27,7 @@ Sanadka miilaadiga [[bil|bishiisa]] toban iyo labaad ahna bisha ugu dambeyso san
 [[cy:Rhagfyr]]
 [[da:December]]
 [[de:Dezember]]
+[[dsb:Zymski]]
 [[dv:ޑިސެމްބަރު]]
 [[ee:Dzome]]
 [[el:Δεκέμβριος]]
