*Empty MediaWiki Message*

--- a/Category:Dowladaha_Yurub.mw
+++ b/Category:Dowladaha_Yurub.mw
@@ -1,2 +1,3 @@
 [[Category:Yurub]]
-aslaamu calay kum salaan kabacdi aniga waxaan ku soo kor dinaya horaynaz ugu so kor diyay bar naa mish ka guurka oo ah bar  naa mish mu hiim ah waxaad na iigu soo gud bin kartaan ciwaan kayga oo ah shaandi400@hotmail.com
+ok
+marka hore waad mahad san tihiin maadaama aad aqbasheen bar naamish kaan mahad sanididn
