Interwiki:  + [[dsb:Požnjenc]]

--- a/Sebteembar.mw
+++ b/Sebteembar.mw
@@ -27,6 +27,7 @@ Sanadka miilaadiga [[bil|bishiisa]] sagaalaad, waxayna u dhaxaysaa bilaha [[agoo
 [[cy:Medi]]
 [[da:September]]
 [[de:September]]
+[[dsb:Požnjenc]]
 [[dv:ސެޕްޓެމްބަރު]]
 [[ee:Anyɔnyɔ]]
 [[el:Σεπτέμβριος]]
