--- a/Ooshiyaaniya.mw
+++ b/Ooshiyaaniya.mw
@@ -1,6 +1,6 @@
 [[Image:LocationOceania.png|thumb|right|300px|Ooshiyaaniya]]
-*Australie
-*Nouvelle-Zélande
+*Awstraaliya
+*New-Seeland
 
 [[Category:Qaaradaha]]
 
