--- a/Category:Dowladaha_Yurub.mw
+++ b/Category:Dowladaha_Yurub.mw
@@ -1,1 +1,1 @@
-hi  iska warama aq bala  waxaan horey idin kuugu soo diray aqbaaro kal gedesian mar ka waxaan idin ka cod sanayaa in aad sida igu dhaqsida badan ugu soo jawaab taan ciwaan kan shaandi400@hotmail.com bey
+ok waan aq balay mahad sanidiin bey laakiin goo mee bogan la bede layaa saa xiibayaal
