--- a/Wabiga_Jubba.mw
+++ b/Wabiga_Jubba.mw
@@ -15,4 +15,5 @@ The river gives its name to the Somali administrative regions of [[Middle Juba]]
 == qoraalkii maxamuud c/risaaq (abucubayda)
 
 
-wabiga jubba waa wabiga labaad ee ugu wayn dalka somalia waana wabi aad ubalaaran . ==
+wabiga jubba waa wabiga labaad ee ugu wayn dalka somalia waana wabi aad ubalaaran .
+Waxaa uu ka soo bilaawdaa wadanka Ethiopia sida wabiga kale ee Shabeele wuxuuna gaaraa ilaa iyo magaalada kismaayo
