[[en:Somali National Movement]]

--- a/SNM.mw
+++ b/SNM.mw
@@ -9,3 +9,9 @@ jabhadu waxa ay sifaysantay geesinimo
 
 == Siyaasada xaadirka ==
 Hadda Hogaamiyayaashii ka hadhay jabhadu waxa ay isku dayaan in ay ku beerlaxawsadaan caamada beesha isaaq in ay taageerto halka beelaha kale ee dalka dagan laga diido oo lagu sifeeyo Qudhmis, kulmis, dhiigyo-cab iyo khaakh.
+
+[[ca:Moviment Nacional Somali]]
+[[de:Somali National Movement]]
+[[en:Somali National Movement]]
+[[ja:ソマリ国民運動]]
+[[pt:Movimento Nacional Somali]]
