--- a/SNM.mw
+++ b/SNM.mw
@@ -1,7 +1,4 @@
-SNM waa jabhad xorayneed oo ay ababuleen beelaha [[isaaq]] ha ku jiraan shaqsiyaad ka mid ah [[samaroon]] sida [[cabdiraxmaan aw cali]] jabhadan oo ilaa imika uu ka sii taaganyahay raaskii guryihii ay dhiseen waxana ka mid ah xisbiga siyaasiga ah ee [[kulmiye]] ee ka jira [[soomaalilaand]].
-
-----
- 
+SNM waa jabhad xorayneed oo ay ababuleen beelaha [[isaaq]] ha ku jiraan shaqsiyaad ka mid ah [[samaroon]] sida [[cabdiraxmaan aw cali]] jabhadan oo ilaa imika uu ka sii taaganyahay raaskii guryihii ay dhiseen waxana ka mid ah xisbiga siyaasiga ah ee [[kulmiye]] ee ka jira [[soomaalilaand]]. 
 
 == Taariikh == 
 jabhada SNM waxa la asaasay [[1982]] kii waxana lagu asaasay magaalada london ee dalka ingiriiska. waxa asaasay aqoonyahano ka soo jeedo beelaha isaaq iyo qaar ka mida ah beesha samaroon laakiin hore ayay dib uga laabteen. Jabhadani si geesinimo ah ayay ula daagalantay xukuumadii [[soomaliya]]waxay  jabhadu gacanta ku dhigtay dhamaan gobolada woqooyiga laakiin gobolka [[awdal]] kadib heshiis lagu gaadhay magaalda [[boorame]]ayay isna gacanta ku dhigtay isla halkaasna lagu asaasay xukuumadii [[soomalilaand]] oo uu madax ka noqday [[maxamad xaaji ibraahim cigaal]] Ilaahay Ha u naxariistee xilka uu ka qaaday ku sii simihiisii isla markaana ahaa hogaamiyihii jabhada ee [[cabdiraxmaan axmed cali]] waxana gudoomiye ku xigeen loogu doortay [[cabdiraxmaan aw cali]]. 
@@ -9,6 +6,8 @@ jabhadu waxa ay sifaysantay geesinimo
 
 == Siyaasada xaadirka ==
 Hadda Hogaamiyayaashii ka hadhay jabhadu waxa ay isku dayaan in ay ku beerlaxawsadaan caamada beesha isaaq in ay taageerto halka beelaha kale ee dalka dagan laga diido oo lagu sifeeyo Qudhmis, kulmis, dhiigyo-cab iyo khaakh.
+
+[[Category:Soomaaliya]]
 
 [[ca:Moviment Nacional Somali]]
 [[de:Somali National Movement]]
