--- a/SNM.mw
+++ b/SNM.mw
@@ -7,7 +7,7 @@ jabhadu waxa ay sifaysantay geesinimo
 == Siyaasada xaadirka ==
 Hadda Hogaamiyayaashii ka hadhay jabhadu waxa ay isku dayaan in ay ku beerlaxawsadaan caamada beesha isaaq in ay taageerto halka beelaha kale ee dalka dagan laga diido oo lagu sifeeyo Qudhmis, kulmis, dhiigyo-cab iyo khaakh.
 
-[[Category:Soomaaliya]]
+[[Category:Siyaasada Soomaaliya]]
 
 [[ca:Moviment Nacional Somali]]
 [[de:Somali National Movement]]
