--- a/Burao.mw
+++ b/Burao.mw
@@ -2,3 +2,12 @@ Burco waa magaalo wayn oo ku taala gobolka Togdheer ee wadanka [[somaliland]]dhi
 dhaqaalha magaaladda ugu wayni wuxuu kasoo galaa [[xoolaha nool]].magaaldda waxaa ka jira ganacsi aad u xoogan.meheradaha ugu waawayn magaaldda burco waxaa ka mida meheradda [[Horseed General Trading Co.}} shirkadan oo ka ganacsata iibinta Qalabka dhismaha,biyaha iyo laydhkaba,maareeyaha shirkadan waa {[bile ahmed]]. way badan yihiin shirkadaha noocan oo kale ah ee magaaldda burco ku yaalla taasoo magaaldda ka dhigtay si dhakhso ah u dhisanta dagaalkii sokeeye wax yar ka dib. magalada burco waxa ka mida xafadaheeda xafada abu dabay o u ku dhashay abdirisaaq ibrahin xaji yusuf waxa kale o ka mida xafada hodan qaylo aktoobar tawali barsiigo dhuurta gaha fiiftiin may xafada london iyo lanta hawada jarmalka tuurta shacabka afgooye qasabka tuurta sii bakhti sity  blaza maharadaha ugu qadiimisan waxa kamida magalada burco macmacanlaha liiban kalinta barsiigo hotel badar 
 
 *[[abdalle bile]]
+*[[Burco]]
+
+[[de:Burao]]
+[[en:Burco]]
+[[es:Burao]]
+[[fi:Burco]]
+[[fr:Burao]]
+[[nl:Burao]]
+[[ro:Burco]]
