*Empty MediaWiki Message*

--- a/Burao.mw
+++ b/Burao.mw
@@ -4,6 +4,8 @@ dhaqaalha magaaladda ugu wayni wuxuu kasoo galaa [[xoolaha nool]].magaaldda waxa
 *[[abdalle bile]]
 *[[Burco]]
 
+[[Category:Soomaaliya]]
+
 [[de:Burao]]
 [[en:Burco]]
 [[es:Burao]]
