روبوت  إضافة: [[zea:Categorie:Afrika]]

--- a/Category:Afrika.mw
+++ b/Category:Afrika.mw
@@ -98,6 +98,7 @@
 [[vi:Thể loại:Châu Phi]]
 [[xh:Category:Afrika]]
 [[yi:קאַטעגאָריע:אפריקע]]
+[[zea:Categorie:Afrika]]
 [[zh:Category:非洲]]
 [[zh-classical:Category:阿非利加洲]]
 [[zh-min-nan:Category:Hui-chiu]]
