روبوت  إضافة: [[ne:Category:एशिया]]

--- a/Category:Aasiya.mw
+++ b/Category:Aasiya.mw
@@ -66,6 +66,7 @@ Qaarada aasiya waa qaarada ugu dadka badan uguna baaxada weyn qaaradaha aduunka.
 [[ms:Kategori:Asia]]
 [[nap:Categoria:Asia]]
 [[nds:Kategorie:Asien]]
+[[ne:Category:एशिया]]
 [[nl:Categorie:Azië]]
 [[nn:Kategori:Asia]]
 [[no:Kategori:Asia]]
