/* Degmooyinka gobolka Sool */

--- a/Sool.mw
+++ b/Sool.mw
@@ -27,7 +27,7 @@ Gobolka [[Sool]] wuxuu ku yaalaa woqooyiga-bari ee [[Soomaaliya]] waxaana caasim
 * Xudun
 * Yagoori (Degmo Cusub Jamhuuriyada Somaliland)
 * Bohol (degmo Cusub Jamhuuriyada Somaliland)
-*oog     degmo cusub somaliland
+*OOG     degmo cusub somaliland
 {{Gobolada Soomaaliya}}
 
 [[Category:Gobolada_Soomaaliya]]
