--- a/1948.mw
+++ b/1948.mw
@@ -86,6 +86,7 @@ __TOC__
 [[mk:1948]]
 [[mr:इ.स. १९४८]]
 [[ms:1948]]
+[[my:1948]]
 [[nah:1948]]
 [[nap:1948]]
 [[nds:1948]]
@@ -134,4 +135,5 @@ __TOC__
 [[wa:1948]]
 [[zh:1948年]]
 [[zh-classical:一九四八年]]
+[[zh-min-nan:1948 nî]]
 [[zh-yue:1948年]]
