روبوت  إضافة: [[my:Category:ဥရောပ]]

--- a/Category:Yurub.mw
+++ b/Category:Yurub.mw
@@ -73,6 +73,7 @@
 [[mk:Категорија:Европа]]
 [[ms:Kategori:Eropah]]
 [[mt:Category:Ewropa]]
+[[my:Category:ဥရောပ]]
 [[na:Category:Uirope]]
 [[nds:Kategorie:Europa]]
 [[nds-nl:Kattegerie:Europa]]
