--- a/Awdal.mw
+++ b/Awdal.mw
@@ -21,30 +21,14 @@ image_location = Somalia_regions_map_Awdal.svg|
 Awdal waa gobol ka mid ah [[:Category:Gobolada Soomaaliya|Gobolada]] [[Soomaaliya]] wuxuuna ku yaalaa woqooyiga-galbeed Soomaaliya. 
 Hadda waxa uu ku tirsanyahay jamhuuriyada lamagac baxday [[somaliland]]. Gobolkan waa gobol taariikh dheer leh, horana loo yaqaanay [[Cadal]]. Gobolkan waa gobolada ugu horumarsan woqooyiga somalia gaar ahaan somaliland xag dhaqaale, waxbarsho, diineed iyo isgaadhsiineedba.
 Gobolkani waxa uu ka koobanyahay shan degmo oo kala ah 
-*[[baki]]
-*[[boorame]]
-*[[dila]]
-*[[lug haya]]
-*[[saylac]]
+*[[Baki]]
+*[[Boorame]]
+*[[Dila]]
+*[[Lughaya]]
+*[[Saylac]]
 Dadka ku dhaqan gobilkan dhamaantood waxay kasoo jeedaan beelaha [[samaroon]], waxa ay u kala degan yihiin degmooyinka sida-tan, degmada [[dila]] [[reer nuur]], degmada [[boorame]] [[reer nuur]], jibriil yoonis, iyo habar cafaan, degmada baki [[reer nuur]] iyo maxad case, degmada lughaya maxad case, degmada saylac maxad case iyo jibriil yoonis.
 gobolkani waa gobolka kaliye ee aan dagaalada sokeeye ee ka dhacay soomaliya oo dhani aynay saamayn marka laga reebo magaalada [[Dila]] oo jabhada SNM ay burburisay 1991 mooyaane. Gobolkan waxa lagu asaasay Jamhuuriyada somaliland, xagaas oo dhamaan xubnaha taliska lagu soo dhisay aynay daganayeen magaala madaxdiisa [[Boorame]] mudo shan bilood ah xagaasna lagu soo magacaabay madaxwaynihii u horeeyay ee la doorto Alaha u naxariistee marxuum [[Maxamed Xaaji Ibraahim Cigaal]]. 
 Gobolka awdal waa gobol dhaqaalihiisu aad ugu tiirsanyahay xoolaha nool, Beeraha, dalxiiska iyo macdanta. Gobolkan waxa ka soo jeeda madaxwaynaha haatan haya xilka jamhuuriyada somaliland ee [[Daahir Rayaale Kaahin]]. 
- 
-
-== Degmooyinka gobolka Awdal ee soomaaliya (haatan somaliland) ==
-
-* [[Baki]]
-* [[Boon]]
-* [[Boorame dhilo badan]]
-* [[Xariirad siil qadhmuun]]
-* [[Dila, waxa dega beelaha Gabooyaha
-* [[Saylac asalkeeda waxa iska leh Isaaq, Habar Yoonis, Muse Care]]
-* [[Goroyacowl, mas laku cun, meleterigii somaliyaa baa masaska ku cuni jirey]]
-* [[Geerisa tuulo]]
-* [[Qulujeed tuul]]
-* [[Libaaxley tuulo]]
-* [[Lughaya waxa degaa Habar Awal
-
 
 Gobolkan waxaa magaala madaxdiisu tahay [[Boorame]] dhaqaalihiisuna waxa uu ku tiirsanyahay ganacsiga iyo xoolaha nool. Magaalo madaxdiisii hore waxa ay ahaan jirtay [[Baki]].
 
@@ -57,6 +41,7 @@ Gobolkan awdal waxa uu xuduud la leeyahay gobolka maroodi jeex ( Hargeisa ) iyo 
 gobolka hargaysa waxa ay isku qabsadeen dagmooyin xiligii doorashooyinka wakiilada, arintaasi oo markii danbe golaha guurtida iyo wakiiladu si afduubasho ah ugu magacaabeen gobolka hargaysa.
 Sidoo kale waxa beelaha [[reer nuur]] ([[samaroon]]) iyo beelaha ([[isaaq]]) ay isku qabsadeen dhulalka banka ee [[wajaale]] arintaasi oo markii ugu danbaysay gaadhay heer la is xabadeeyo hadan xukuumada somaliland ay eeda saartay beesha [[reer nuur]] loona xidhay afartan dagaalyahan oo [[reer nuur]] iyaga iyo hubkoodii fududaa oo ahaa 40 [[AK-47]] iyo shan mbk. arintaasi oo uu qaboojiyay madaxwaynuhu markii uu cuqaasha reer nuur ku qanciyay markale ee i ixtiraama. 
 arintan iyo kuwa kale oo badan waxa si wanaagsan loogu xusay aragtida [[awdalaynta]] ee ay soo saareen aqoonyahanada [[dharaar institite]].
+
 
 [[ar:أودل]]
 [[de:Awdal (Region)]]
