--- a/2000.mw
+++ b/2000.mw
@@ -5,6 +5,17 @@ __TOC__
 ==Dhacdooyin==
 ==Dhalashooyin==
 ==Dhimashooyin==
+tariiqda aduunka waa in lagu daraa dhacdooyinka taagan ee maanta kajira dunida
+waxaa la wada ogayahay siyaasad mareeykanka ee calamka islamka uu kula jiro in eey tahay arin eey kadanbeeyso israil waayo waxaanu oganahay labada diin ee kala aha kristanka iyo muslimka waa laba diin oo isku mid ah hadana waxyar ku kala duwan marka waxaan halkaan inigu tusayaa in eeysan aheeyn dagal diin ee tahay dagal israil ee amirka magaceeda wadata waayo waxaanu ogsoonahay dadka dhaqaalaha mareeykanka hugaanka u haya in eey yihiin yuhuuda taas oo eey adeegsanayaan in eey waxeey rabaan kasameeyaan aduunka maanta aanu joogno waxaad arki doontaa waqti dhaw iyagoo lagu fahmay siyaasadooda qaldan iyo wax badsiga eey damacsanyihiin  oo fashilmi doonta dadka aduunka kasoo wada horjeesandoona waxaan kaloo aan inala socodsiinayaa arinta iyo dhibka eey soomaliya ka geesteen iyagoo wata shaati american ama shaati amxaaro waxaanu oganahy dadka somaliyeed in eey kabooxaan dad waxbartay oo og halka dhibka dalkooda kasocda laga hago ama lagasoo abaabulo ama cida iyo dadka kadanbeeya dadka eey yihiin shaati walba ha sooxirtaane marna dadka ama shacabka somaliyeed ma hilmaami doonan taariiqahooda iyo dhibatada loo geestay iyo gardarada logu layay dadka aanan waxba galabsan thariiqdu weey cadahay soomaaliyeey nin xun oo qabiil ku aawr kacsada in uu somali hor istagi karin ee arintu kawantahay waxaana kuu cadeeynaya maxakiimtii sida loogalay iyo in anan nobad loo ogaleeyn shacabkaas dhibateeysan ee yuhuud u danleedahay xeebaha somaliya ineey helaan oo falastiin iskaga soo guuraan wakaas hade wax walba waa suurta gal israaci weeydaye ha lagu arooso ee naag nimo diyaar u noqo waayo siada aadtahay inta aad tahay qimo aad leedaa iska yar
+waxaan ku gaba gabeeynayaa fikradeyda hees ama gabay waxanan ku bilaabay sidaan 
+ciroolaheena 
+camalkiisu waa
+colaad
+cirid aan ilka laheeyn beey
+cududo goynayaan 
+
+qore jama c\jama e mail- jeestowho@hotmail.com
+
 ==Madaxda Aduunka==
 
 [[Category:Sanad]]
