--- a/Hargeysa.mw
+++ b/Hargeysa.mw
@@ -1,6 +1,7 @@
 [[Image:City of hargeisa (view).jpg|thumb|300px|Hargeysa]]
 
 [[Hargeysa]] Waa magaalo madaxda  Somaliland. Waana magaalada labaad ee ugu weyn dalka [[Somaliya]].
+hargeysa  ka hortii aanay noqon caasimada somalinad waxay ahayd caasimada labaad ee soomaaliya waxay nasiib u heshay hargeysa inay noqo magaalo la dulmiyay oo aan yeelan adeegyo wanaagsan sida laydhka biyaha, iyada oo ah caasimada labaad waxaa lagu weeraray oo lagu burburray cududii iyo xoogii uu lahaa ciidanka qaran soomaaliyeed 1988-1991. la soco inta dhiman.........
 
 
 
