*Empty MediaWiki Message*

--- a/Kismaayo.mw
+++ b/Kismaayo.mw
@@ -4,7 +4,7 @@
 
 [[Category:Magaalooyinka Soomaaliya]]
 
-[[de:Kismaayo]]
+[[de:Kismaayo]]waxaad  karagten cidii qorteyba    beesha sade daaroot
 [[en:Kismayo]]
 [[es:Kismaayo]]
 [[et:Kismaayo]]
