--- a/Amistardam.mw
+++ b/Amistardam.mw
@@ -7,3 +7,68 @@ dakfjadfad
 [[Category:Yurub]]
 
 [[fr:Amsterdam]]
+[[ga:Amstardam]]
+[[gd:Amsterdam]]
+[[gl:Ámsterdam - Amsterdam]]
+[[he:אמסטרדם]]
+[[hi:एम्सटर्डम]]
+[[hr:Amsterdam]]
+[[ht:Amstèdam]]
+[[hu:Amszterdam]]
+[[hy:Ամստերդամ]]
+[[ia:Amsterdam]]
+[[id:Amsterdam]]
+[[ilo:Amsterdam, Nederlandia]]
+[[io:Amsterdam]]
+[[is:Amsterdam]]
+[[it:Amsterdam]]
+[[ja:アムステルダム]]
+[[ka:ამსტერდამი]]
+[[ko:암스테르담]]
+[[la:Amstelodamum]]
+[[lb:Amsterdam]]
+[[li:Amsterdam]]
+[[lij:Amsterdam]]
+[[lt:Amsterdamas]]
+[[lv:Amsterdama]]
+[[mk:Амстердам]]
+[[ml:ആംസ്റ്റര്‍ഡാം]]
+[[mr:ऍम्स्टरडॅम]]
+[[ms:Amsterdam]]
+[[na:Amsterdam]]
+[[nds:Amsterdam]]
+[[nds-nl:Amsterdam]]
+[[nl:Amsterdam]]
+[[nn:Amsterdam]]
+[[no:Amsterdam]]
+[[nov:Amsterdam]]
+[[oc:Amsterdam]]
+[[pl:Amsterdam]]
+[[pms:Àmsterdam]]
+[[pt:Amsterdão]]
+[[qu:Amsterdam]]
+[[ro:Amsterdam]]
+[[roa-rup:Amsterdam]]
+[[ru:Амстердам]]
+[[scn:Amsterdam]]
+[[sh:Amsterdam]]
+[[simple:Amsterdam]]
+[[sk:Amsterdam]]
+[[sl:Amsterdam]]
+[[sq:Amsterdami]]
+[[sr:Амстердам]]
+[[sv:Amsterdam]]
+[[sw:Amsterdam]]
+[[ta:ஆம்ஸ்டர்டம்]]
+[[tg:Амстердам]]
+[[th:อัมสเตอร์ดัม]]
+[[tr:Amsterdam]]
+[[udm:Амстердам]]
+[[uk:Амстердам]]
+[[vec:Amsterdam]]
+[[vi:Amsterdam]]
+[[vo:Amsterdam]]
+[[yi:אמסטערדאם]]
+[[zea:Amsterdam]]
+[[zh:阿姆斯特丹]]
+[[zh-yue:阿姆斯特丹]]
