روبوت  إضافة: [[dsb:Kategorija:Azija]]

--- a/Category:Aasiya.mw
+++ b/Category:Aasiya.mw
@@ -27,6 +27,7 @@ Qaarada aasiya waa qaarada ugu dadka badan uguna baaxada weyn qaaradaha aduunka.
 [[cy:Categori:Asia]]
 [[da:Kategori:Asien]]
 [[de:Kategorie:Asien]]
+[[dsb:Kategorija:Azija]]
 [[el:Κατηγορία:Ασία]]
 [[en:Category:Asia]]
 [[eo:Kategorio:Azio]]
