--- a/Category:Taariikh.mw
+++ b/Category:Taariikh.mw
@@ -1,98 +1,65 @@
-[[Taariikh]]
+Somalia
+ 
+Map of Somalia  
 
-[[af:Kategorie:Geskiedenis]]
-[[als:Kategorie:Gschicht]]
-[[an:Categoría:Istoria]]
-[[ang:Category:Stǣr]]
-[[ar:تصنيف:تاريخ]]
-[[ast:Categoría:Historia]]
-[[az:Kateqoriya:Tarix]]
-[[bar:Kategorie:Gschicht]]
-[[be:Катэгорыя:Гісторыя]]
-[[be-x-old:Катэгорыя:Гісторыя]]
-[[bg:Категория:История]]
-[[bh:Category:इतिहास]]
-[[br:Rummad:Istor]]
-[[bs:Kategorija:Historija]]
-[[ca:Categoria:Història]]
-[[cdo:Category:Lĭk-sṳ̄]]
-[[cs:Kategorie:Historie]]
-[[cv:Категори:Истори]]
-[[cy:Categori:Hanes]]
-[[da:Kategori:Historie]]
-[[de:Kategorie:Geschichte]]
-[[el:Κατηγορία:Ιστορία]]
-[[en:Category:History]]
-[[eo:Kategorio:Historio]]
-[[es:Categoría:Historia]]
-[[et:Kategooria:Ajalugu]]
-[[eu:Kategoria:Historia]]
-[[fa:رده:تاریخ]]
-[[fi:Luokka:Historia]]
-[[fo:Bólkur:Søga]]
-[[fr:Catégorie:Histoire]]
-[[fy:Kategory:Skiednis]]
-[[ga:Catagóir:Stair]]
-[[gl:Category:Historia]]
-[[gv:Category:Shennaghys]]
-[[he:קטגוריה:היסטוריה]]
-[[hi:श्रेणी:इतिहास]]
-[[hr:Kategorija:Povijest]]
-[[hsb:Kategorija:Stawizny]]
-[[ht:Kategori:Istwa]]
-[[hu:Kategória:Történelem]]
-[[ia:Categoria:Historia]]
-[[id:Kategori:Sejarah]]
-[[io:Category:Historio]]
-[[is:Flokkur:Saga]]
-[[it:Categoria:Storia]]
-[[ja:Category:歴史]]
-[[ka:კატეგორია:ისტორია]]
-[[kn:ವರ್ಗ:ಇತಿಹಾಸ]]
-[[ko:분류:역사]]
-[[ku:Kategorî:Dîrok]]
-[[la:Categoria:Historia]]
-[[lad:Category:Istoria]]
-[[lb:Category:Geschicht]]
-[[li:Categorie:Historie]]
-[[lmo:Category:Stòria]]
-[[ln:Category:Historia]]
-[[lt:Kategorija:Istorija]]
-[[lv:Kategorija:Vēsture]]
-[[mk:Категорија:Историја]]
-[[ms:Kategori:Sejarah]]
-[[mt:Category:Storja]]
-[[nap:Categoria:Storia]]
-[[nds:Kategorie:Historie]]
-[[nds-nl:Kattegerie:Geschiedenis]]
-[[nl:Categorie:Geschiedenis]]
-[[nn:Kategori:Historie]]
-[[no:Kategori:Historie]]
-[[nrm:Category:Histouaithe]]
-[[oc:Categoria:Istòria]]
-[[os:Категори:Истори]]
-[[pl:Kategoria:Historia]]
-[[pt:Categoria:História]]
-[[ro:Categorie:Istorie]]
-[[ru:Категория:История]]
-[[scn:Catigurìa:Storia]]
-[[se:Category:Historjá]]
-[[sh:Category:Historija]]
-[[simple:Category:History]]
-[[sk:Kategória:História]]
-[[sl:Kategorija:Zgodovina]]
-[[sq:Category:Historia]]
-[[sr:Категорија:Историја]]
-[[ss:Category:Umlandvo]]
-[[su:Kategori:Sajarah]]
-[[sv:Kategori:Historia]]
-[[th:หมวดหมู่:ประวัติศาสตร์]]
-[[tr:Kategori:Tarih]]
-[[tt:Törkem:Taríx]]
-[[uk:Категорія:Історія]]
-[[ur:زمرہ:تاریخ]]
-[[vi:Thể loại:Lịch sử]]
-[[yi:קאַטעגאָריע:היסטאריע]]
-[[zh:Category:历史]]
-[[zh-classical:Category:史]]
-[[zh-yue:Category:歷史]]
+National name: Soomaaliya
+
+Current government officials 
+
+Land area: 242,216 sq mi (627,339 sq km); total area: 246,199 sq mi (637,657 sq km)
+
+Population (2007 est.): 9,118,773 (growth rate: 2.8%); birth rate: 44.6/1000; infant mortality rate: 113.1/1000; life expectancy: 48.8; density per sq mi: 38
+
+Capital and largest city (2003 est.): Mogadishu, 1,208,800
+
+Monetary unit: Somali shilling
+
+Languages: Somali (official), Arabic, English, Italian
+
+Ethnicity/race: Somali 85%, Bantu and others 15% (including Arabs 30,000)
+
+Religion: Islam (Sunni)
+
+Literacy rate: 38% (2001 est.)
+
+Economic summary: GDP/PPP (2005 est.): $4.835 billion; per capita $600. Real growth rate: 2.4%. Inflation: n.a. (businesses print their own money). Unemployment: n.a. Arable land: 2%. Agriculture: bananas, sorghum, corn, coconuts, rice, sugarcane, mangoes, sesame seeds, beans; cattle, sheep, goats; fish. Labor force: 3.7 million (very few are skilled laborers); agriculture (mostly pastoral nomadism) 71%, industry and services 29%. Industries: a few light industries, including sugar refining, textiles, wireless communication. Natural resources: uranium and largely unexploited reserves of iron ore, tin, gypsum, bauxite, copper, salt, natural gas, likely oil reserves. Exports: $241 million f.o.b. (2004 est.): livestock, bananas, hides, fish, charcoal, scrap metal. Imports: $576 million f.o.b. (2004 est.): manufactures, petroleum products, foodstuffs, construction materials, qat. Major trading partners: UAE, Yemen, Oman, Djibouti, Kenya, India, Brazil (2004).
+
+Communications: Telephones: main lines in use: 15,000 (2000); mobile cellular: n.a. Radio broadcast stations: AM 0, FM 1, shortwave 5 (2001). Radios: 470,000 (1997). Television broadcast stations: 3; note: two in Mogadishu; one in Hargeisa (2001). Televisions: 135,000 (1997). Internet Service Providers (ISPs): 3 (one each in Boosaaso, Hargeisa, and Mogadishu) (2000). Internet users: 200 (2000).
+
+Transportation: Railways: 0 km. Highways: total: 22,100 km; paved: 2,608 km; unpaved: 19,492 km (1999 est.). Ports and harbors: Boosaaso, Berbera, Chisimayu (Kismaayo), Merca, Mogadishu. Airports: 60 (2002).
+
+International disputes: “Somaliland” secessionists provide port facilities to land-locked Ethiopia and establish commercial ties with regional states; “Puntland” secessionists clash with “Somaliland” secessionists to establish territorial limits and clan loyalties, each seeking support from neighboring states; Ethiopia maintains only an administrative line with the Oromo region of southern Somalia and maintains alliances with local Somali clans opposed to the unrecognized Transitional National Government in Mogadishu.
+
+Major sources and definitions 
+ 
+  
+
+Geography
+Somalia, situated in the Horn of Africa, lies along the Gulf of Aden and the Indian Ocean. It is bounded by Djibouti in the northwest, Ethiopia in the west, and Kenya in the southwest. In area it is slightly smaller than Texas. Generally arid and barren, Somalia has two chief rivers, the Shebelle and the Juba.
+
+Government
+Between Jan. 1991 and Aug. 2000, Somalia had no working government. A fragile parliamentary government was formed in 2000, but it expired in 2003 without establishing control of the country. In 2004, a new transitional parliament was instituted and elected a president.
+
+History
+From the 7th to the 10th century, Arab and Persian trading posts were established along the coast of present-day Somalia. Nomadic tribes occupied the interior, occasionally pushing into Ethiopian territory. In the 16th century, Turkish rule extended to the northern coast, and the sultans of Zanzibar gained control in the south.
+
+After British occupation of Aden in 1839, the Somali coast became its source of food. The French established a coal-mining station in 1862 at the site of Djibouti, and the Italians planted a settlement in Eritrea. Egypt, which for a time claimed Turkish rights in the area, was succeeded by Britain. By 1920, a British and an Italian protectorate occupied what is now Somalia. The British ruled the entire area after 1941, with Italy returning in 1950 to serve as United Nations trustee for its former territory.
+
+By 1960, Britain and Italy granted independence to their respective sectors, enabling the two to join as the Republic of Somalia on July 1, 1960. Somalia broke diplomatic relations with Britain in 1963 when the British granted the Somali-populated Northern Frontier District of Kenya to the Republic of Kenya.
+
+On Oct. 15, 1969, President Abdi Rashid Ali Shermarke was assassinated and the army seized power. Maj. Gen. Mohamed Siad Barre, as president of a renamed Somali Democratic Republic, leaned heavily toward the USSR. In 1977, Somalia openly backed rebels in the easternmost area of Ethiopia, the Ogaden Desert, which had been seized by Ethiopia at the turn of the century. Somalia acknowledged defeat in an eight-month war against the Ethiopians that year, having lost much of its 32,000-man army and most of its tanks and planes. President Siad Barre fled the country in late Jan. 1991. His departure left Somalia in the hands of a number of clan-based guerrilla groups, none of which trusted each other.
+
+Africa's worst drought of the century occurred in 1992, and, coupled with the devastation of civil war, Somalia was plunged into a severe famine that killed 300,000. U.S. troops were sent in to protect the delivery of food in Dec. 1992, and in May 1993 the UN took control of the relief efforts from the U.S. The warlord Mohamed Farah Aidid ambushed UN troops and dragged American bodies through the streets, causing an about-face in U.S. willingness to involve itself in the fate of this lawless country. The last of the U.S. troops departed in late March, leaving 19,000 UN troops behind.
+
+Since 1991 Somalia has been engulfed in anarchy. Years of peace negotiations between the various factions were fruitless, and warlords and militias ruled over individual swaths of land. In 1991, a breakaway nation, the Somaliland Republic, proclaimed its independence. Since then several warlords have set up their own ministates in Puntland and Jubaland. Although internationally unrecognized, these states have been peaceful and stable.
+
+In Aug. 2000, a parliament convened in nearby Djibouti and elected Somalia's first government in nearly a decade. After its first year in office, the government still controlled only 10% of the country, and in Aug. 2003, its mandate expired. In Oct. 2002, new talks to establish a government began; in Aug. 2004 a 275-member transitional parliament was inaugurated for a five-year term. Parliament selected a national president in September, Abdullahi Yusuf Ahmed, the president of the breakaway region of Puntland. The new government, however, spent its first year operating out of Kenya—Somalia remained too violent and unstable to enter—eventually settling in the provincial town of Baidoa.
+
+In May 2006, the country's worst outbreak of violence in 10 years began, with Islamist militias, called the Somali Islamic Courts Council (SICC), battling rival warlords. On June 6, the Islamist militia seized control of the capital, Mogadishu, and established control in much of the south. Somalia's transitional government, led by President Abdullahi Yusuf and situated in Baidoa, spent months engaged in unsuccessful peace negotiations with the Islamic Courts Council. In the meantime, neighboring Ethiopia, which has clashed in the past with Somalia's Islamists and considers them a threat to regional security, began amassing troops on the border. In mid-December, Ethiopia launched air strikes against the Islamists, and in a matter of days Ethiopian ground troops and Somali soldiers loyal to the transitional government regained control of Mogadishu. A week later most of the Islamists had been forced to flee the country. Ethiopia announced that its troops would remain in the country until stability was assured and a functional central government had been established, ending Somalia's fifteen years of anarchy. In Jan. 2007, the U.S. launched airstrikes on the retreating Islamists, who they believed included three members of al-Qaeda suspected of involvement in the 1998 bombings of the American embassies in Nairobi and Dar es Salaam. The air strikes were strongly criticized in a number of Muslim countries, which accused the Americans of killing Somali civilians. Battles between the insurgents and Somali and Ethiopian troops intensified in March, leaving 300 civilians dead in what has been called the worst fighting in 15 years. The fighting created a humanitarian crisis, with more than 320,000 Somalis fleeing the fighting in Mogadishu in just two months. In July, a national reconciliation conference opened in Mogadishu but was quickly postponed when leading opposition figures failed to appear. The fighting intensified once again in October. 
+
+Prime Minister Ali Muhammad Ghedi resigned in October after a protracted feud with President Yusuf. He was succeeded by Nur Hassan Hussein.
+
+See also Encyclopedia: Somalia.
+U.S. State Dept. Country Notes: Somalia
+Iam Feysal Bedel Garaad
+somali writing  in sweden stockholm
