روبوت  إضافة: [[it:Categoria:Stati dell'Europa]], [[rm:Category:Stadis da l'Europa]]

--- a/Category:Wadamada_Yurub.mw
+++ b/Category:Wadamada_Yurub.mw
@@ -34,6 +34,7 @@
 [[hy:Կատեգորիա:Եվրոպական երկրներ]]
 [[id:Kategori:Negara di Eropa]]
 [[is:Flokkur:Evrópulönd]]
+[[it:Categoria:Stati dell'Europa]]
 [[ja:Category:ヨーロッパの国]]
 [[ka:კატეგორია:ევროპის ქვეყნები]]
 [[ko:분류:유럽의 나라]]
@@ -53,6 +54,7 @@
 [[pam:Category:Bangsa king Europa]]
 [[pl:Kategoria:Państwa Europy]]
 [[pt:Categoria:Países da Europa]]
+[[rm:Category:Stadis da l'Europa]]
 [[rmy:Shopni:Europake thema]]
 [[ro:Categorie:Ţări în Europa]]
 [[ru:Категория:Страны Европы]]
