*Empty MediaWiki Message*

--- a/Ceel_Buur.mw
+++ b/Ceel_Buur.mw
@@ -2,3 +2,7 @@
 Ceelbuur waa magaalo katirsan gobolka [[Galguduud]]
 
 {{gumud}}
+ceelbuur waxay ku taal gobolka galgaduud waxayna aheed caasimada gobolka galgaduud inta aanan loo badalin dhuusamareeb.
+ceelbuur waxay ay caan ku tahay dhagaxa burjikada laga sameeyo iyo dab qaadka iyo farshaxanada kaleba taas oo loo iibgayn jirey wadanka gudahiisa iyo dibadiisa waxa kale ay caan ku tahay geed loo yaqaan ceelbuur kuyaale kaas oo kabaxo ceelbuur oo kali ah inta la ogyahay.
+ceelbuur waa magaalo ay ay dagaan inta badan labo beel oo kala ah duduble iyo murusade.
+ceelbuur waa magaalo marka roobku daò ay biyo ku hareersamaan aadna u quruxbadan
