--- a/Madaxweyneyaashii_Soomaaliya.mw
+++ b/Madaxweyneyaashii_Soomaaliya.mw
@@ -4,7 +4,7 @@
 * [[Cabdirashiid Cali Sharma'arke]] : [[1967]] - [[1969]]
 * [[Maxamed Siyaad Barre]] : [[1969]] - [[1991]]
 * [[Ali Mahdi Muhammad]] : [[1991]] - [[1995]]
-* [[Cabdiqaasim Salaad Xassan]] : [[2000]] - [[2003]]
+* [[Cabdiqaasim Salaad Xassan Tuug]] : [[2000]] - [[2003]]
 * [[Cabdullaahi Yuusuf Axmed]] : [[2004]] -
 
 [[Category:Siyaasada Soomaaliya]]
