*Empty MediaWiki Message*

--- a/Cali_Mahdi.mw
+++ b/Cali_Mahdi.mw
@@ -1,4 +1,16 @@
-Waa nin fiican oo dalkiisa nabad la jecel
+Cali Mahdi wuxuu ku dhashay Tuulada Cadowuul ee ka tirsan gobalka Shabeelada Dhexe sanadaku markuu ahaa [[1939]]. Cali Mahdi asago jira dada 3 sano ayaa xamar reerkooda u soo gureen taasina fursad u siisay in wax ku barto isolaadkii Xamar ka jiray. Cali Mahdi [[1959]] ayaa Qahira waxuu u aaday wax barasho dhanka la dagaalanka Duumada "Anti Malaria" marku soo noqdayna wuxuu shaqo ka bilaabay Wasaarada Caafimadka ee wadanka Soomaliya.
+
+Cali Mahdi wuxuu fursad u yeeshay in uu xubin ka noqdo barlamaanka Somaaliya sanadki [[1969]] asagoo noqday qofkii ugu dhalinyaraa ee xubin ka noqda barlamaanka Soomaliyeed.
+
+Kadib markii u dhacay inqalaabki dowladda shicibka aheeyd ee wadanka la wareegay Xooga Dalka Somaliyeed, Cali Mahdi wuxuu dib ugu laabtay shaqadiisi wasaaradda Caafimaadka, halkaas u ku gaaray jago Agaasime Guud. Sanadku markuu aha 1977 Cali Mahdi wuxuu ka ruqseeystay shaqadii dowladda wuxuuna u wareegay ganacsi. Cali Mahdi mudadii u dhaxeeysay sanadihii 1977-1990 wuxuu noqday nin lagu tiriyo ganacsatada ugu waaweeyn wadanka soomaliyeed. 
+
+Sanadahii 80's Cali Mahdi iyo gancsato iyo aqoonyahaano Soomaliyeed aya waxaa asaasay urur odoyaal ah "Manifesto" o waraaq lagu codsnaayo in wax looga badalo siyaasadda Soomaliyeed u diray madaxweeynihii wadanka ee markaas Maxamed Siyaad Barre.
+
+Sanadka markuu ahaa 1991 ayaa Cali Mahdi waxaa loo magacaabay Madaxweeynaha Soomaliya. Muddo gaaban kadib waxaa bilowday dagaal sokeeye oo ka dhacay magaalada muqdishu oo aay isaga hor yimaadeen heeybo raacsan Maxamded Farax Caydiid oo diidan madaxweeyne nimada Cali Mahdi iyo kuwo difaacay Cali Mahdi.
+
+Cali Mahdi wuxuu xilkii madaxweeynimada ku wareejiyay shirkii ka dhacay magaalada Carta ee wadank Jibuuti sanadka markuu ahaa 2000.
+
+Cali Mahdi sanadkii 2007 wuxuu abaabulay shir nabadeed belaha Somaaliyeed laysugu keenaayo.
 ([[1991]]-[[1995]])
 
 [[Category:Siyaasada Soomaaliya]]
