--- a/Yuhuuda.mw
+++ b/Yuhuuda.mw
@@ -4,7 +4,7 @@ Yuhuudu waa dad haysta diinta yuhuudiga, diintaas oo ay sheegaan in ay ka timid 
 
 == asalka yuhuuda ==
 yuhuudu asal ahaan waxa ay ka tafiirmaan nabi ibraahim laakiin waxa ay daganaan jireen [[masar]] halkaas oo uu [[fircoon]] ku guumaystay deetana nabi muuse Ilaahay u soo diray oo uu ka badbaadiyay dajiyayna dhulka [[shaam]] laakiin ay diideen inay soo xoreeyaay [[baytal-maqdis]] lakiin aakhirkii Ilaahay u xoreeyay galeena. yuhuuda deetana waa laga eryada meesha waxana ka eryaday roomaaniyiinta oo ka gumaaday markaasna waxa dhacay wixii loo yaqaanay [[firidhka yuhuuda]] oo ay yurub iyo caalamka ku galeen. yuhuudu waxa ay u kala baxaan laba iyo toban jilib.dib danbe ugumay soon noqon yuhuudu [[qudus]] kahor xiligii [[1945]] markii uu ingiriisku soo dajiyay mooyaane.
-
+Yuhuudu waa umad tuugo ah, tuugnimadii ugu waynayd dhamaan jiritaanka biniaadamnimada ayay kula kaceen umada muslimka ah ee [[falastiin]]. 
 
 
 {{gumud}}
