Reverted edits by [[Special:Contributions/78.146.177.140|78.146.177.140]] ([[User talk:78.146.177.140|Talk]]); changed back to last version by [[User:AlleborgoBot|AlleborgoBot]]

--- a/KMG_Soomaaliya.mw
+++ b/KMG_Soomaaliya.mw
@@ -84,7 +84,7 @@ Kooxaha maangaabka ah iyo kuwa loo adeegsaday dhagarta dalkooda ayaa ilaa maanta
 
 [[CEELKA CONOCO]]: Dalka Soomaaliya marka la eego juqraafi ahaan, waxaa loo malaynayaa in uu ku kaydsan yahay shidaal farabadan. Shirkadaha muddad dheer ku hamiyayey in ay shidaal ka soo saaraan [[Soomaaliya]] waxaa ka mid ah shirkadda Conoco, taas oo xarun ama kaam ballaaran ku lahayd meel [http://www.somalitalk.com/oil/ceelka_conoco.html (Kaam)] 35 km dhanka Bari ka xigta magaalada Garoowe ee Gobolka Nugaal... Akhri [[CEELKA CONOCO]]
 
-== Xogta Soomaaliya ==Dalkii moryaanta cuntay........
+== Xogta Soomaaliya ==
 
 Dalka Soomaaliya waxa uu ku yaalaa geeska Africa wuxuuna ku fadhiyaa dhul baaxadiisu dhantahay 635.541km2, waxana uu xuduud la wadaagaa Bari waxaa ka xiga Badweynta hindiya, waqooyina waxaa ka xiga Jabuuti, Galbeedna dalka Itoobiya, halka koonfur galbeedna uu ka xigo dalka Kenya.
 Dalka Soomaaliya waxa uu yahay dalka labaad ee ugu xeebta dheer qaaradda Africa wuxayna leedahay xeeb dhirirkeedu tahay 3333km.
