*Empty MediaWiki Message*

--- a/Category:Dowladaha_Yurub.mw
+++ b/Category:Dowladaha_Yurub.mw
@@ -1,3 +1,1 @@
-ok waan aq balay mahad sanidiin bey laakiin goo mee bogan la bede layaa saa xiibayaal
-
-[[Category:Yurub]]
+waan ku daal nay sida aad noo dhahay seen waan bede laynaa laa kiin anaga ayaaba wax kaqabanayna how lihiina oo dhan waayo anaga mar dhaw soo caan baxayno sidaa lasocdo ama shaqaysta ama ha shaqaysana
