--- a/Kobanhaygan.mw
+++ b/Kobanhaygan.mw
@@ -1,1 +1,5 @@
-waxa wejee magalada madaxa denamrk ijo waxa degan 5 milljo oo dad ahh somali wej dagan jahi
+Waxa wejee magalada madaxa denmark ijo waxa degan 5 milljo oo dad ahh somali wej dagan jahi.
+
+[[Category:Yurub]]
+
+[[fr:Copenhague]]
