*Empty MediaWiki Message*

--- a/Kobanhaygan.mw
+++ b/Kobanhaygan.mw
@@ -1,4 +1,4 @@
-Waxa wejee magalada madaxa denmark ijo waxa degan 5 milljo oo dad ahh somali wej dagan jahi.
+Waxa wejee magalada madaxa [[denmark]] ijo waxa degan 5 milljo oo dad ahh somali wej dagan jahi.
 
 [[Category:Yurub]]
 
