--- a/Kobanhaygan.mw
+++ b/Kobanhaygan.mw
@@ -3,3 +3,56 @@ Waxa wejee magalada madaxa [[denmark]] ijo waxa degan 5 milljo oo dad ahh somali
 [[Category:Yurub]]
 
 [[fr:Copenhague]]
+[[ga:Cóbanhávan]]
+[[gl:Copenhaguen - København]]
+[[he:קופנהגן]]
+[[hr:Kopenhagen]]
+[[ht:Kopènag]]
+[[hu:Koppenhága]]
+[[hy:Կոպենհագեն]]
+[[id:Kopenhagen]]
+[[io:København]]
+[[is:Kaupmannahöfn]]
+[[it:Copenaghen]]
+[[ja:コペンハーゲン]]
+[[ka:კოპენჰაგენი]]
+[[kl:København]]
+[[ko:코펜하겐]]
+[[ku:Kopenhag]]
+[[kw:Kopenhavn]]
+[[la:Hafnia]]
+[[lb:Kopenhagen]]
+[[lij:Copenaghen]]
+[[lt:Kopenhaga]]
+[[lv:Kopenhāgena]]
+[[mr:कोपनहेगन]]
+[[nap:Copenaghen]]
+[[nds:Kopenhagen]]
+[[nl:Kopenhagen]]
+[[nn:København]]
+[[no:København]]
+[[nov:København]]
+[[oc:Copenaga]]
+[[pl:Kopenhaga]]
+[[pms:Copenàghen]]
+[[pt:Copenhaga]]
+[[qu:København]]
+[[ro:Copenhaga]]
+[[ru:Копенгаген]]
+[[sa:कोपनहागन]]
+[[sc:Copenaghen]]
+[[se:København]]
+[[sh:Kopenhagen]]
+[[simple:Copenhagen]]
+[[sk:Kodaň]]
+[[sl:København]]
+[[sr:Копенхаген]]
+[[sv:Köpenhamn]]
+[[sw:Kopenhagen]]
+[[th:โคเปนเฮเกน]]
+[[tr:Kopenhag]]
+[[uk:Копенгаген]]
+[[vec:Copenaghen]]
+[[vi:Copenhagen]]
+[[vo:København]]
+[[zh:哥本哈根]]
