*Empty MediaWiki Message*

--- a/Kobanhaygan.mw
+++ b/Kobanhaygan.mw
@@ -1,3 +1,5 @@
+[[Image:Politiken building.jpg|thumb|Copenhagen, [[Denmark]]]]
+
 Waxa wejee magalada madaxa [[denmark]] ijo waxa degan 5 milljo oo dad ahh somali wej dagan jahi.
 
 [[Category:Yurub]]
