--- a/KMG_Soomaaliya.mw
+++ b/KMG_Soomaaliya.mw
@@ -122,7 +122,7 @@ Shaxda Gobolada iyo Degmooyinka Dalkeena.
 
 
 Dhererka u dhexeya Gobolada dalka Soomaaliya.
-Shaxda soo socota ayaa waxa ay muujinaysaa fogaanta u dhexeysa Gobolada dalkeena iyo magaala madaxda.
+Shaxda soo socota ayaa waxa ay muujinaysaa fogaanta u dhexeysa Gobolada dalkeena iyo magaala madaxda. bye jujuqlaar
 
 == Muqdisho inta eey ujirto magaalooyinka kale==
  
