/* Degmooyinka gobolka Banaadir */

--- a/Mohammed_Abdirahman_Omar.mw
+++ b/Mohammed_Abdirahman_Omar.mw
@@ -22,7 +22,7 @@ image_location = Somalia_regions_map_Banaadir.svg|
 
 [[Banaadir]] waxaa la isku dhihi jiray qarnigii 19aad magaalooyinka [[Soomaaliya|Soomaaliyeed]] ee ku yaal xeebaha [[Badweynta Hindiya]] laga bilaabo [[Cadale]] laguna geeyo magaalada [[Baraawe]]. Waaguu gumaysiga [[Talyaaniga]] koonfurta [[Soomaaliya]] katalin jirey iyo horaantii madaxbanaanida dalka [[Soomaaliya]], [[Banaadir]] waxay ka koobanayd gobolada hadda loo kala yaqaan [[Shabeellaha Dhexe]], [[Shabeellaha Hoose]] iyo [[Banaadir]] balse waxaa la bedele 198? markii ay dowlada Kacaanka bedeshey soohdimaha gobolada [[Soomaaliya]].
 
-==Degmooyinka gobolka [[Banaadir]]==
+==Degmooyinku gobolka [[Banaadir]]==
 *[[Boondheere]]
 *[[Xamarjajab]]
 *[[Xamarweyne]]
