--- a/Wikipedia:Maxaa_cusub.mw
+++ b/Wikipedia:Maxaa_cusub.mw
@@ -1,5 +1,4 @@
-[[
-== Link title ==
-[[Image:[[Media:Example.jpg]][[Image:--[[Special:Contributions/193.219.242.40|193.219.242.40]] 16:21, 7 Diseembar 2007 (UTC)Example.jpg<nowiki>
-----
-Insert non-formatted text here'''''Bold text'''''</nowiki>]]]]]]
+* [[Wikipedia:Requests for adminship|Requests for adminship]]
+* Tusaaleyaal sidii loo isticmaalilahaa calaamada luqadaha "[[Wikipedia:Babel|Babel]]"
+* Sidii ereyada [[wajigahore]] (interface) ee boggan loogu tarjumilahaa afka soomaaliga
+* Waxaa arimaha la'xiriira boggan (beejkan), si toos ah looga hadlikaraa xarunta '''Internet Relay Chat (IRC)''' ee [irc://irc.freenode.net/#so.wikipedia #so.wikipedia]
