Undo revision 12887 by [[Special:Contributions/83.21.45.168|83.21.45.168]] ([[User talk:83.21.45.168|Talk]])

--- a/Template:Please_don't_change_this_page.mw
+++ b/Template:Please_don't_change_this_page.mw
@@ -1,1 +1,39 @@
-NIGGERS GO TO HELL!!!
+{{Help contents back}}{{/Header}}<div style="border:2px solid #A3B1BF; padding:.5em 1em 1em 1em;border-top:none;background-color:#fff;color:#000">
+<div style="padding:1ex; ">
+        <div style="float: left; width: 50%; padding-bottom: 1em; border-right: 1px solid #c0c0c0;">
+            <div style="float: right; padding-right: 8%;">
+<h3 style="font-size:100%;margin:0;">Add to an existing article...</h3>
+* Learn more about '''[[Wikipedia:How to edit a page|editing pages]]'''
+* '''[[Wikipedia:How to edit a page#Sections, paragraphs, lists and lines|Organize and format]]''' your writing
+* '''[[Wikipedia:How to edit a page#Images|Embellish your edits]]''' with images or sounds
+* '''[[Wikipedia:How to edit a page#Links and URLs|Link]]''' to other Wikipedia articles and other Web sites
+            </div>
+        </div>
+        <div style="float: left; width: 44%; margin-left: 4.5%;">
+<h3 style="font-size: 100%; margin: 0;">Write a new article...</h3>
+* Read about how to create '''[[Wikipedia:Your first article|your first article]]'''
+* Start a '''[[Wikipedia:Most wanted articles|wanted article]]'''
+* ...or try our '''[[Wikipedia:Community Portal|Community Portal]]''' for more ideas
+        </div>
+        <div style="text-align: center;">
+            <div style="width: 17em; margin: 0 auto; clear: both; white-space: nowrap; text-align: left;">
+<h3 style="font-size:100%;margin:0;">Find out more...</h3>
+*See the '''[[Wikipedia:Cheatsheet|Cheatsheet]]''' for examples of the basic editing functions
+*Experiment with editing in the '''[[Wikipedia:Sandbox|Sandbox]]'''
+*Discover the '''[[Wikipedia:Five pillars|Five pillars]]''' &mdash; that define Wikipedia's character
+*Read what Wikipedia '''[[Wikipedia|is]]''' and what Wikipedia '''[[Wikipedia:What Wikipedia is not|is not]]'''.
+            </div>
+        </div>
+    </div>
+    <div style="float:right; margin-top: 0.0em; margin-bottom:3px; background-color: #cee0f2; padding: .2em .6em; font-size: 130%; border: 1px solid #a3b1bf;"> Next: [[Wikipedia:Introduction 3|'''Explore Wikipedia ''']] <span style="font-size: larger; font-weight: bold;">&rarr;</span>
+<div style="clear:both"></div></div></div>
+
+    
+[[ca:Viquipèdia:Introducció II]]
+[[es:Wikipedia:Introducción 2]]
+[[is:Wikipedia:Kynning 2]]
+[[no:Wikipedia:Introduksjon 2]]
+[[sl:Wikipedija:Uvod 2]]
+[[th:&#3623;&#3636;&#3585;&#3636;&#3614;&#3637;&#3648;&#3604;&#3637;&#3618;:&#3648;&#3619;&#3636;&#3656;&#3617;&#3605;&#3657;&#3609; 2]]
+[[zh:Wikipedia:概述2]]
+[[he:ויקיפדיה:לימדו עוד על עריכה]]
