*Empty MediaWiki Message*

--- a/Jijeele.mw
+++ b/Jijeele.mw
@@ -3,3 +3,6 @@ Jijeele waa qabiil kamid ah qabaa ilka [[somaliya]] waxaay kasiibaxaan [[hawiye]
 {{gumud}}
 
 [[en:Jijeele]]
+
+
+waryaa waxaa jira qabiilooyin jijeele ah oo aad ka tagteen sida maxamed jijeelle
