Bot Status Request for [[:User:Purbo_T|Purbo_T]]

--- a/Wikipedia:Bots.mw
+++ b/Wikipedia:Bots.mw
@@ -95,6 +95,24 @@ Thanks  --[[User:AlleborgoBot|AlleborgoBot]] 13:12, 12 Oktoobar 2007 (UTC)
 ====Reject====
 # .
 
+=== [[:User:Purbo_T|Purbo_T]] ===
+Hi, I request a bot status in order to propagate interwiki links.
+*User: [[:User:Purodha]] = [[:ksh:User:Purodha]] (b'crat @ [[:ksh:|ksh]])
+*Bot account: [[:User:Purbo_T|Purbo_T]]
+*[[:Special:Contributions/Purbo T|Test edits]]
+*For its interwiki link maintenance:
+**The bot uses the [[:meta:pywikipedia|pywikipediabot]] software framework and is daily updated from [http://svn.wikimedia.org/svnroot/pywikipedia/trunk/pywikipedia/ svn] to latest version.
+**Operation is predominantly in manually-assisted mode, occasionally in automatic or autonomous mode.
+**It is starting mostly from the [[:ksh:|Wikipedia of Ripuarian languages]].
+**It is already bot-flagged on: <span class="plainlinks"> [{{fullurl:aa:Special:Userlist|limit=1&username=Purbo_T}} aa], [{{fullurl:am:Special:Userlist|limit=1&username=Purbo_T}} am], [{{fullurl:ar:Special:Userlist|limit=1&username=Purbo_T}} ar], [{{fullurl:be-x-old:Special:Userlist|limit=1&username=Purbo_T}} be-x-old], [{{fullurl:bn:Special:Userlist|limit=1&username=Purbo_T}} bn], [{{fullurl:bo:Special:Userlist|limit=1&username=Purbo_T}} bo], [{{fullurl:bug:Special:Userlist|limit=1&username=Purbo_T}} bug], [{{fullurl:bxr:Special:Userlist|limit=1&username=Purbo_T}} bxr], [{{fullurl:cdo:Special:Userlist|limit=1&username=Purbo_T}} cdo], [{{fullurl:co:Special:Userlist|limit=1&username=Purbo_T}} co], [{{fullurl:crh:Special:Userlist|limit=1&username=Purbo_T}} crh], [{{fullurl:de:Special:Userlist|limit=1&username=Purbo_T}} de], [{{fullurl:dsb:Special:Userlist|limit=1&username=Purbo_T}} dsb], [{{fullurl:dz:Special:Userlist|limit=1&username=Purbo_T}} dz], [{{fullurl:ee:Special:Userlist|limit=1&username=Purbo_T}} ee], [{{fullurl:eo:Special:Userlist|limit=1&username=Purbo_T}} eo], [{{fullurl:fa:Special:Userlist|limit=1&username=Purbo_T}} fa], [{{fullurl:fi:Special:Userlist|limit=1&username=Purbo_T}} fi],[{{fullurl:fj:Special:Userlist|limit=1&username=Purbo_T}} fj], [{{fullurl:fr:Special:Userlist|limit=1&username=Purbo_T}} fr], [{{fullurl:gv:Special:Userlist|limit=1&username=Purbo_T}} gv], [{{fullurl:hr:Special:Userlist|limit=1&username=Purbo_T}} hr], [{{fullurl:hsb:Special:Userlist|limit=1&username=Purbo_T}} hsb], [{{fullurl:ht:Special:Userlist|limit=1&username=Purbo_T}} ht], [{{fullurl:ig:Special:Userlist|limit=1&username=Purbo_T}} ig], [{{fullurl:is:Special:Userlist|limit=1&username=Purbo_T}} is], [{{fullurl:ja:Special:Userlist|limit=1&username=Purbo_T}} ja], [{{fullurl:jbo:Special:Userlist|limit=1&username=Purbo_T}} jbo], [{{fullurl:ksh:Special:Userlist|limit=1&username=Purbo_T}} ksh], [{{fullurl:ku:Special:Userlist|limit=1&username=Purbo_T}} ku], [{{fullurl:kv:Special:Userlist|limit=1&username=Purbo_T}} kv], [{{fullurl:lbe:Special:Userlist|limit=1&username=Purbo_T}} lbe], [{{fullurl:lg:Special:Userlist|limit=1&username=Purbo_T}} lg], [{{fullurl:lmo:Special:Userlist|limit=1&username=Purbo_T}} lmo], [{{fullurl:lo:Special:Userlist|limit=1&username=Purbo_T}} lo],[{{fullurl:lt:Special:Userlist|limit=1&username=Purbo_T}} lt], [{{fullurl:ml:Special:Userlist|limit=1&username=Purbo_T}} ml], [{{fullurl:mr:Special:Userlist|limit=1&username=Purbo_T}} mr], [{{fullurl:nds:Special:Userlist|limit=1&username=Purbo_T}} nds], [{{fullurl:new:Special:Userlist|limit=1&username=Purbo_T}} new], [{{fullurl:nl:Special:Userlist|limit=1&username=Purbo_T}} nl], [{{fullurl:nn:Special:Userlist|limit=1&username=Purbo_T}} nn], [{{fullurl:nov:Special:Userlist|limit=1&username=Purbo_T}} nov], [{{fullurl:or:Special:Userlist|limit=1&username=Purbo_T}} or], [{{fullurl:os:Special:Userlist|limit=1&username=Purbo_T}} os], [{{fullurl:pms:Special:Userlist|limit=1&username=Purbo_T}} pms], [{{fullurl:simple:Special:Userlist|limit=1&username=Purbo_T}} simple], [{{fullurl:stq:Special:Userlist|limit=1&username=Purbo_T}} stq], [{{fullurl:sv:Special:Userlist|limit=1&username=Purbo_T}} sv], [{{fullurl:tg:Special:Userlist|limit=1&username=Purbo_T}} tg], [{{fullurl:to:Special:Userlist|limit=1&username=Purbo_T}} to], [{{fullurl:ts:Special:Userlist|limit=1&username=Purbo_T}} ts], [{{fullurl:ty:Special:Userlist|limit=1&username=Purbo_T}} ty], [{{fullurl:vec:Special:Userlist|limit=1&username=Purbo_T}} vec], [{{fullurl:vi:Special:Userlist|limit=1&username=Purbo_T}} vi], [{{fullurl:vls:Special:Userlist|limit=1&username=Purbo_T}} vls], [{{fullurl:vo:Special:Userlist|limit=1&username=Purbo_T}} vo],  [{{fullurl:yi:Special:Userlist|limit=1&username=Purbo_T}} yi], [{{fullurl:za:Special:Userlist|limit=1&username=Purbo_T}} za], [{{fullurl:zea:Special:Userlist|limit=1&username=Purbo_T}} zea], [{{fullurl:zh-classical:Special:Userlist|limit=1&username=Purbo_T}} zh-classical], </span> more pending.
+* Generally, there is [http://tools.wikimedia.de/~purodha/sample/dbswithuser.php?usr=Purbo_T cumulated&nbsp;data] on the bot (sorry, due to current technical problems at the [[:m:toolserver|toolserver]], the data is partially not up to date, and may be inaccessible for short periods of time)
+Thank you! --[[User:Purodha|Purodha Blissenbach]] 11:25, 12 Febraayo 2008 (UTC)
+
+====Approval====
+# …
+====Reject====
+# …
+
 ==Bot policy==
 Hello. To facilitate [[m:steward|steward]] granting of bot access, I'd like to implement the [[m:Bot policy|standard bot policy]] on this wiki. This will involve creating a redirect to this page from [[Project:Bot policy]], and adding a line at the top noting that it is used here. In particular, this policy allows automatic acceptance of known interlanguage linking bots (if this page says that is acceptable), which form the vast majority of such requests. 
 
