/* Degmooyinka gobolka Galguduud */

--- a/Galguduud.mw
+++ b/Galguduud.mw
@@ -23,7 +23,7 @@ Gobolkan wuxuu qaab beeleedkiisu la mid yahay Gobolka Banaadir waayo waxaa ka so
 == Degmooyinka gobolka Galguduud==
 
 * [[Dhuusamareeb]]
-* [[Caabudwaaq]]
+* [[Caabudwaaq]][[Marexan]]
 * [[Ceelbuur]]
 * [[Ceeldheer]]
 * [[Cadaado]] 
