--- a/Galguduud.mw
+++ b/Galguduud.mw
@@ -23,12 +23,15 @@ Gobolkan wuxuu qaab beeleedkiisu la mid yahay Gobolka Banaadir waayo waxaa ka so
 == Degmooyinka gobolka Galguduud==
 
 * [[Dhuusamareeb]]
-* [[Caabudwaaq]]   [[Marexan]]
+* [[Caabudwaaq]]   
 * [[Ceelbuur]]
 * [[Ceeldheer]]
 * [[Cadaado]] 
 * [[Balanballe]]
 * [[Guriceel]]
+
+* [[Dhulka ugu Badan gobolkan waxa Dega Beelaha Celi (Marehan) iyo Cayr (Habar-gidar)]]
+
 {{Gobolada Soomaaliya}}
 [[Category:Gobolada_Soomaaliya]]
 
