--- a/Axad.mw
+++ b/Axad.mw
@@ -111,6 +111,6 @@ luqada Ingiriiska waxaa laguyiraahdaa Sunday, mida Finnishakana Sunnuntai.
 [[vi:Chủ nhật]]
 [[vls:Zundag]]
 [[wa:Dimegne]]
-[[yi:זונטאג]]
+[[yi:זונטיק]]
 [[zh:星期日]]
 [[zh-yue:星期日]]
