*Empty MediaWiki Message*

--- a/Template:Mashruucyoqaraabo.mw
+++ b/Template:Mashruucyoqaraabo.mw
@@ -1,5 +1,7 @@
 <h2 style="text-align: center;">Mashruucyo qaraabo la'ah Wikipedia</h2>
 <div style="font-size: 90%;">
+
+<h1>warya?? hahahaha!! lalalal!!a ohohohhahahhha slfisjf;liasjf;dlsdj</h1>
 Wikipedia waxaa maamula urrur aanan faa'ido raadinnin oo ah [[Wikimedia|Urrurka-Wikimedia]], kaasoo maamula mashruucyokale oo xor ah kuna saleeysan luqado kala gedisan :</div>
 {| align="center" cellpadding="2" width="100%" style="text-align: left; font-size: 90%;"
 | [[Image:Wiktionary-logo-en.png|35px]]
