/* Sayid Ciise Masiix waa Erayga Eebbe oo Nool */

--- a/Kiristaanka.mw
+++ b/Kiristaanka.mw
@@ -192,7 +192,7 @@ Sida aynu wada ogsoon nahayna kuwaas waxay ka mid yihiin waxyaabaha uu Eebbe abu
 Waxaana xaqiiqo ah in uu Eebbe qaabkuu doono iska dhigi karo uuna dadkiisa isugu muujin karo hadba sida ay Isaga la tahay inay u qaadan karaan. Mana jiraan wax Isaga ka hor is-taagi karaya amuurtaas.
 
 ===Sayid [[Ciise]] Masiix waa Erayga Eebbe oo Nool===
-Haddaba waxaynu kor ku soo barannay sharraxaad kooban oo ka hadlaysa waxa loola jeedo Saddex-midnimada Eebbe oo macnaheedu yahay in uu Eebbe Isagoo mid keliya ah haddana uu leeyahay saddex Shakhsiyadeed oo uu jiritaan ahaan ka kooban yahay. 
+Haddabwaxaynu kor ku soo barannay sharraxaad kooban oo ka hadlaysa waxa loola jeedo Saddex-midnimada Eebbe oo macnaheedu yahay in uu Eebbe Isagoo mid keliya ah haddana uu leeyahay saddex Shakhsiyadeed oo uu jiritaan ahaan ka kooban yahay. 
 
 Saddexdaas Shakhsiyadeed mid ka mid ahna waxaynu ku soo sheegnay in uu yahay Sayid Ciise Masiix oo ah Erayga Eebbe oo nool. Sida dhabta ahna Masiixiyiinta iyo Muslimiintuba wey isla qabaan in Sayid Ciise Masiix loo aqoonsan yahay in uu yahay Erayga Nool oo Eebbe. 
 
@@ -230,7 +230,7 @@ Balse qofka isku mid ahaanshaha Eebbe iyo Eraygiisa aan oggolayn waa arrin isaga
 
 Sidaa awgeed qofkii doonaya in uu wax ka fahmo in Sayid Ciise Masiix uu yahay qayb ka mid ah saddexda Shakhsiyadeed oo uu Eebbe leeyahay, waxaan filayaa inay tusaalooyinkaas iyo aayadahaasba ugu filan yihiin arrimo uu wax ku qaato. 
 
-Sidaa awgeed waxaan rajaynayaa ciddii amuurtaas aan horay u ogeyn inay maantaba garato in uu Sayid Ciise Masiix yahay Erayga Nool oo Eebbe, ahna qayb ka mid ah saddexda Shakhsiyadeed oo uu Eebbe ka kooban yahay Isagoo haddana mid keliya ah. 
+Sidaa awgeed waxaan rajaynayaa ciddii amuurtaas aan horay u ogeyn inay maantaba garato in uu Sayid Ciise Masiix yahay Erayga Nool oo Eebbe, ahna qayb ka mid ah saddexda Shakhsiyadeed oo uu Eebbe ka kooban yahay Isagoo haddana mid keliya ah.
 
 ===Ilaahnimada Sayid Ciise Masiix===
 Sida aynu wada ogsoon nahay Sayid Ciise Masiix waa Erayga Eebbe. Qodobkaas isaga ahna waa qodob ay Masiixiyiinta iyo Muslimiintuba isla qabaan oo aanu wax muran ah ka taagnayn. 
