--- a/Boorama.mw
+++ b/Boorama.mw
@@ -22,4 +22,4 @@ Gobolka [[Awdal]] siiba magaalomadaxda gobolkan ee Boorama waxa ay kaga duwan ta
 [[nl:Borama]]
 [[pt:Borama]]
 [[ro:Boorama]]
-[[zh:伯拉瑪]]
+[[zh:博拉马]]
