روبوت  تعديل: [[pt:Anexo:Lista de presidentes da Somália]]

--- a/Madaxweyneyaashii_Soomaaliya.mw
+++ b/Madaxweyneyaashii_Soomaaliya.mw
@@ -17,6 +17,6 @@
 [[id:Daftar presiden Somalia]]
 [[ja:ソマリアの大統領一覧]]
 [[pl:Prezydenci Somalii]]
-[[pt:Lista de presidentes da Somália]]
+[[pt:Anexo:Lista de presidentes da Somália]]
 [[ro:Listă de preşedinţi ai Somaliei]]
 [[sv:Lista över Somalias presidenter]]
