--- a/Hargeysa.mw
+++ b/Hargeysa.mw
@@ -14,6 +14,7 @@ A-ladiif
 [[Category:Magaalooyinka_Soomaaliya]]
 [[Category:Juquraafiga_Soomaaliya]]
 
+[[ar:هرجيسا]]
 [[cs:Hargeysa]]
 [[de:Hargeysa]]
 [[en:Hargeisa]]
