Redirecting to [[Elitareeya]]

--- a/Eritrea.mw
+++ b/Eritrea.mw
@@ -1,1 +1,1 @@
-Erataria waadal kuyaala bariga afrika gaar ahan badda cas ila khaliijka cadmeeda aagga loo yaqaan baabal mandab dalkaas waxa horay uga tirsanan jiray jamhuuriyada ethopia wuxuuna ka go,ay sanadii 1991 dalka erataria waxa haatam katiliya madaxweyne issas Afwerki dalka eratiya waxa uu xuduud lawadaha wadamada jabuuti ethopia masar iyo suudaan iyo gacanka cadmeed gaar ahan baabal mandab dalka erataria waadal sabool ah hadana intii kadanbaysay sanadihii 1991 ayuu soo gadahay hormar weyn oo lataaban[[Image:Example.jpg]] karo
+#redirect[[Elitareeya]]
