/* Degmooyinka gobolka Togdheer */

--- a/Togdheer.mw
+++ b/Togdheer.mw
@@ -17,22 +17,4 @@ subdivision_list = |
 website = |
 image_location = Somalia_regions_map_Togdheer.svg|
 }}
-==Degmooyinka gobolka Togdheer==
-* [[Balidhiig]]
-* [[Burco]]
-* [[Buuhoodle]]
-* [[Oodwayn]]
-* [[Sheekh]]
-
-{{Gobolada Soomaaliya}}
-[[Category:Gobolada_Soomaaliya]]
-
-[[de:Togdheer]]
-[[en:Togdheer]]
-[[es:Togdheer]]
-[[eu:Togdheer]]
-[[fr:Togdheer]]
-[[it:Togdheer]]
-[[nl:Togdheer]]
-[[pt:Togdheer]]
-[[sv:Togdheer]]
+togdheer waa gobolka labaad ee ugu wayn somaliland
