--- a/Laylkase.mw
+++ b/Laylkase.mw
@@ -40,6 +40,6 @@ Iyo reerayow kale oo rfaraban
 Leelkase waxay ay leeyhiin in kabadan 30 isin oo waawayn oo isigug jira ugaasyo salaadiin iyo cuqaal kale laakiin intooda badan waxay hoos yimaadaan Ugaas Axmed Ugaas Maxamed .
 
 leelkase ayaa ah [[qabiilada]] soomaaliyeed kuw augu nabadda jecel .
-
+iyadoo sidoo kalena ay barqo cad meel saaraan ciidii soo gardaraysata taasoo leh tusaalooyin dhowr ah oo taariiqda dhow ah waxaana ka mid ah tii majeerteen iyo tii habargidir
 [[ar:ليلكسة]]
 [[en:Leelkase]]
