*Empty MediaWiki Message*

--- a/Laylkase.mw
+++ b/Laylkase.mw
@@ -40,6 +40,21 @@ Iyo reerayow kale oo rfaraban
 Leelkase waxay ay leeyhiin in kabadan 30 isin oo waawayn oo isigug jira ugaasyo salaadiin iyo cuqaal kale laakiin intooda badan waxay hoos yimaadaan Ugaas Axmed Ugaas Maxamed .
 
 leelkase ayaa ah [[qabiilada]] soomaaliyeed kuw augu nabadda jecel .
-iyadoo sidoo kalena ay barqo cad meel saaraan ciidii soo gardaraysata taasoo leh tusaalooyin dhowr ah oo taariiqda dhow ah waxaana ka mid ah tii majeerteen iyo tii habargidir
+iyadoo sidoo kalena ay barqo cad meel saaraan ciidii soo gardaraysata taasoo leh tusaalooyin dhowr ah oo taariiqda dhow ah waxaana ka mid ah tii majeerteen iyo tii habargidir ee dhacday sagaashameeyadii.
+Dhinaca kale leelkaseha waxaa ku jiro beel lagu magacaabo Reer Maxamed Xassan oo caanka ka ah guud ahaan gobolada leelkase ka dagaan somalia iyadoo guud ahaan leelkasuhu yahay dad dagaalka u adkeysta ayaa hadana jifadaas reer maxamed xasan waxay hibo u leedahay jabinta codowgooda dagaalka .
+Leelkasaha waa qabiil dhexdiisa is ixtiraama oo aan dagaal sokeeye ka dhex dhicin taasoo ay ugu wacantahay indheer garadnimadooda.
+Beelaha Leelkase ee degan Galdogob waxaa ugu badan 
+
+1:Reer Maxamed Muumin...............100,000
+2:Reer Maxamed Xassan Muumin.........90,000
+3:Reer Xirsi Muumin...................60,000
+4:Reer Cali Muumin....................10,000
+5:Reer Fiqi Ismaaciil..................55,000
+
+Leelkase kale oo aad u badan baa isna jira kuwaasoo ay ka mid yihiin Maxamuud Cali,Maalis moge, Reer Xassan iyo Reer Maxamed Aaden.
+Hadaba Qabiilkaan oo Xukumi jiray dhamaan Qabiilada kale ee somalia ayaa Ay u heshiiyeen qabiiladii kale markaaseey mar qura dagaal ku soo qaadeen iyagoo markaasna ku guuleystay in xukunkii leelkase ridaan.
+Leelkase waxaa ka badbaayay Maxamed Muumin oo Koriyey dhowr walaalihiis ah sida Wiilka uu dhalay Xasan muumin ee Maxamed Xasan .
+
+
 [[ar:ليلكسة]]
 [[en:Leelkase]]
