--- a/Xaliimo_Khaliif_Cumar_Magool.mw
+++ b/Xaliimo_Khaliif_Cumar_Magool.mw
@@ -8,5 +8,5 @@ Xaliimo Khaliif Cumar oo ku magac-dheereed Magool waxay ku dhalatey gobolka [[Hi
 [[Category:Soomaaliya]]
 [[Category:Fanka_Soomaaliya]]
 [[Category:Shaqsiyadaad]]
-
-                                                                                                                                                                                                                                                                                                                     Alla ha u naxariistee Xaliimo Khaliif Magool waxey aheyd hooyada fanka, By Baana
+                                                                                                                                                                                                                                                                                                                  Alla ha u naxariistee Xaliimo Khaliif Magool waxey aheyd hooyada fanka, By Baana
+xaliimo cumar khaliif markidanbo waxey iskubadashay khaiifad sanadihidanbo by shiino
