*Empty MediaWiki Message*

--- a/Ugaas_Cilmi_Ugaas_Warfaa.mw
+++ b/Ugaas_Cilmi_Ugaas_Warfaa.mw
@@ -4,6 +4,6 @@ Ilaha xaqiiqdan oo ku kala qeybsan [[Geography]] ahaan Qoraxey intey loo yiqiin 
 
 Taarikhda wixii udhaxeeyay 1700 ilaa iyo bilowgii 1800 yaa mugdi gashay, guud ahaan soomaliba.
 waxaa kaloo jiray Geed la odhan jiray " Gobkii dooxa weyn" oo u carisgaas ahaa geedka reer cilmi ku kala tala qaato, sida ka muuqata erayadii cilmi raage allaha unaxariistee wuxuu yidhi " Gangan iyo Gafuurkii hadhiyo, faafan gudaheeda, Galadiid Goobkii Dooxa weyn, Goray meeshiisa"
-Dib aan ugu laabano sababta aanu u magacownay Geography'ga Qoraxey. Sababtu waxaa weeye in ilo lagu kal sooni qabo iyana tilmaaneen in taliska Ugaas magacan uu ahaa Ciid Iyo Doollo.
+Dib aan ugu laabano sababta aanu u magacownay Geography'ga Qoraxey. Sababtu waxaa weeye in ilo lagu kal sooni qabo iyana tilmaaneen in taliska Ugaas magaan uu ahaa Ciid Iyo Doollo.
 Nasiib daro owgeed doollo maanta hooyga qoraxey ma,aha, sida uu gumeysiga dhulka Ogadenia ukala qeybiyey owgeed. Laakin nasiib wanaag Ciid yaa Maanta ka mid ah Dhulka loo yaqaan Qoraxey.
 Cilmi Family ahaan 12'kiisii wiil maanta waxaa ka joogo, Reer Xirsi Cilmi, Reer Boon Cilmi, Reer Faarax Cilmi, Bihinanuur oo ah kooshin iyo liibaan, Warfaa-Ugaas, Khalaf, Wacays.
