روبوت  إضافة: [[fiu-vro:Keemiä]]

--- a/Kimisteri.mw
+++ b/Kimisteri.mw
@@ -49,6 +49,7 @@ Kimistari waa barashada aasaasiga ah ee sayniska maatarka( matter) iyo iskudhisk
 [[eu:Kimika]]
 [[fa:شیمی]]
 [[fi:Kemia]]
+[[fiu-vro:Keemiä]]
 [[fo:Evnafrøði]]
 [[fr:Chimie]]
 [[frp:Ch·imie]]
