*Empty MediaWiki Message*

--- a/KMG_Soomaaliya.mw
+++ b/KMG_Soomaaliya.mw
@@ -1,5 +1,6 @@
 {{Infobox Country or territory
-|native_name              = {{lang|so|''Soomaaliya''}}<br/>{{rtl-lang|ar|الصومال}}<br/>Somalia
+|native_name              = {{lang|so|Jamhuuriyadda Soomaaliya}}<br/>{{rtl-lang|ar|''جمهورية الصومال''}} 
+|conventional_long_name   = ''Somali Republic''
 |common_name              = Somalia
 |image_flag               = Flag of Somalia.svg
 |image_coat               = Coat of arms of Somalia.png
