*Empty MediaWiki Message*

--- a/Sadaam_Xuseen.mw
+++ b/Sadaam_Xuseen.mw
@@ -13,4 +13,4 @@
 |-
 |}
 
-'''Sadaam Xuseen '''Cabd al-Majid al-Tikriti''' (Carabi: {{lang|ar|صدام حسين عبد المجيد التكريتي }}) '''waaxuu ahaa [[madaxwaynihii]] [[Ciraaq]] laga bilaado taariikhdu markey ahayd 16 Julaay 1979 ilaa 9 Abriil 2003. Sadaam Xuseen wuxuu noolaa, laga bilaabo  28 Abril 1937 ilaa 30 Diseenbar 2006.
+'''Sadaam Xuseen '''Cabd al-Majid al-Tikriti''' (Carabi: {{lang|ar|صدام حسين عبد المجيد التكريتي }}) '''waaxuu ahaa [[madaxwaynihii]] [[Ciraaq]], laga bilaado taariikhdu markey ahayd 16 Julaay 1979 ilaa 9 Abriil 2003. Sadaam Xuseen wuxuu noolaa, laga bilaabo  28 Abril 1937 ilaa 30 Diseenbar 2006.
