--- a/Ciraaq.mw
+++ b/Ciraaq.mw
@@ -248,8 +248,8 @@ June-1979 Bakr waxaa uu fariin qarsoodi ah u diray madaxweynihii Syria Asad taa 
 
  
 
-===SADAM XUSEEN===
-[[Image:Saddam Hussein.jpg|thumb|[[Sadam Xuseen]]]]
+===SADAAM XUSEEN===
+[[Image:Saddam Hussein.jpg|thumb|[[Sadaam Xuseen]]]]
 
 Ap-28-[[1937]]-ayuu ku dhashay Auja oo u dhow magaalada [[Tikrit]] oo u jirta 200km waqooyiga [[Baghdad]].
 
