--- a/Ciraaq.mw
+++ b/Ciraaq.mw
@@ -249,7 +249,7 @@ June-1979 Bakr waxaa uu fariin qarsoodi ah u diray madaxweynihii Syria Asad taa 
  
 
 ===SADAAM XUSEEN===
-[[Image:Saddam Hussein.jpg|thumb|[[Sadaam Xuseen]]]]
+[[Image:Saddam Hussein.jpg|thumb|[[Sadaam Xusen]]]]
 
 Ap-28-[[1937]]-ayuu ku dhashay Auja oo u dhow magaalada [[Tikrit]] oo u jirta 200km waqooyiga [[Baghdad]].
 
