--- a/Sadaam_Xuseen.mw
+++ b/Sadaam_Xuseen.mw
@@ -41,7 +41,7 @@ Juun-1-[[1972]]-waxaa uu hogaaminayey qorshe lagu qarameynayay ilaha Saliida kuw
 
 Juun-[[1979]]-Sadam waxaa uu noqday madaxweynaha dalka Ciraaq.Ka dib markii uu xukunka kala wareegay madaxweyne Bakr taa oo ka dhalatay damacii Bakr ee ahaa in uu Syria la midoobo Sadamna taa waa uu ka soo horjeeday. Wuuxuna ku xukumay xabsi guri.
 
-Sebteenbar-17-[[1980]]-Sadam waxaa uu ka baxay heshiiskii uu 75-kii la galay Iraan ee ku saabsanaa xuduudaha.
+Sebteembar-17-[[1980]]-Sadam waxaa uu ka baxay heshiiskii uu 75-kii la galay Iraan ee ku saabsanaa xuduudaha.
 
 Sebteenbar-22-1980- waxaa bilaabmay dagaalkii Ciraaq iyo Iran.
 
