*Empty MediaWiki Message*

--- a/Sadaam_Xuseen.mw
+++ b/Sadaam_Xuseen.mw
@@ -43,7 +43,7 @@ Juun-[[1979]]-Sadam waxaa uu noqday madaxweynaha dalka Ciraaq.Ka dib markii uu x
 
 Sebteembar-17-[[1980]]-Sadam waxaa uu ka baxay heshiiskii uu 75-kii la galay Iraan ee ku saabsanaa xuduudaha.
 
-Sebteenbar-22-1980- waxaa bilaabmay dagaalkii Ciraaq iyo Iran.
+Sebteembar-22-1980- waxaa bilaabmay dagaalkii Ciraaq iyo Iran.
 
 [[1988]]-Ciraaq ayada o kaalmo ka heleysa Ciidamada bada ee mareykanka ayey dib u qabsatay dhulkii Iraan kaga qabsatay intii dagaalka lagu guda jiray ee u dhaxeysay 1984-86.
 
