--- a/Sadaam_Xuseen.mw
+++ b/Sadaam_Xuseen.mw
@@ -6,16 +6,23 @@
 | colspan="2" style="font-size: larger; text-align: center;" | '''Sadaam Xuseen''' <br>
 [[Image:Iraq%2C_Saddam_Hussein_%28222%29.jpg|220px]]
 |-
-! colspan="2" style="background-color: #d0d0d0; text-align: center;" | Madaxwaynihii shanaad ee Ciraaq
+! colspan="2" style="background-color: #cdcdb4; text-align: center;" | Madaxwaynihii shanaad ee Ciraaq
 |-
 ! Maqac
 | Sadaam Xuseen
 |-
+! Dhashay
+| 20 Abriil 1937
+|-
+! Dhintay
+| 30 Deseembar 2006
+|-
+
 |}
 
 '''Sadaam Xuseen '''Cabd al-Majid al-Tikriti''' (Carabi: {{lang|ar|صدام حسين عبد المجيد التكريتي }}) '''waaxuu ahaa [[madaxwaynihii]] [[Ciraaq]], laga bilaado taariikhdu markey ahayd 16 Julaay 1979 ilaa 9 Abriil 2003. Sadaam Xuseen wuxuu noolaa, laga bilaabo  28 Abril 1937 ilaa 30 Diseenbar 2006, wuxuu jiray 69 sano.
 
-Abriil-28-[[1937]]-ayuu ku dhashay Auja oo u dhow magaalada [[Tikrit]] oo u jirta 200km waqooyiga [[Baghdad]].
+Abriil-28-[[1937]]-ayuu ku dhashay Al-awja,[[Ciraaq]] oo u dhow magaalada [[Tikrit]] oo u jirta 200km waqooyiga [[Baghdad]].
 
 [[1956]]-ayuu ku biiray xisbiga [[Ba’ath]]
 
