--- a/Shahaadah.mw
+++ b/Shahaadah.mw
@@ -2,17 +2,16 @@
 
 [[Image:Flag of Jihad.svg|thumb|Flag featuring the first [[Kalimah]], the Shahadah]]
 
-'''Shahadah''' ([[luuqada carabiga]]: {{lang|ar|الشهادة}},shahadah waxa weeye qrista ilaahay in uu yahay hal kaliya waaxid maba tawxis ka oo ah qirista ilaahy.
-shahadah waxey ka mid tahay shanta tiir oo ugu muhiimsan diinta islaamka waxaana weeye tiirk koowad oo ah shadah.
+'''Shahadah''' ([[luuqada carabiga]]: {{lang|ar|الشهادة}}),shahadah waxa weeye qirista ilaahay in uu yahay hal kaliya waaxid maba tawxis ka oo ah qirista ilaahy.
+shahadah waxey ka mid tahay shanta tiir oo ugu muhiimsan diinta [[Islaam]]ka, waxaana weeye tiirk koowad oo ah shahaadada.
 
 == Akhrinta ==
 
 أشهد أن لا إله إلاَّ الله و أشهد أن  محمد رسول الله (luuqada carabiga)
 
+Waxaan qirayaa in uusan jirin ilaah, Alle (''Allaah'') mooye, waxana qirayaa in uu nabi Muxamed yahay rasuulkii Alle (''Allaah'').
+
 I testify that there is no god (ilah) but God (Allah), and I testify that] Muhammad is the messenger of God (English) 
-
-Waxaan qirayaa in uusan jirin ilaah ilaa hmooye, waxana qirayaa in uu nabi muxamed yahay rasuulkii alle.
-
 [[Category:Islaam]]
 
 [[ar:شهادتان]]
