*Empty MediaWiki Message*

--- a/Shahaadah.mw
+++ b/Shahaadah.mw
@@ -1,8 +1,8 @@
-[[Image:Shahadah.jpg|thumb|Shahadah]]
+[[Image:Shahadah.jpg|thumb|Shahaadah]]
 
 [[Image:Flag of Jihad.svg|thumb|Flag featuring the first [[Kalimah]], the Shahadah]]
 
-'''Shahadah''' ([[luuqada carabiga]]: {{lang|ar|الشهادة}}),shahadah waxa weeye qirista ilaahay in uu yahay hal kaliya waaxid maba tawxis ka oo ah qirista ilaahy.
+'''Shahaadah''' ([[luuqada carabiga]]: {{lang|ar|الشهادة}}), ama shahaado waxa weeye qirista Ilaahay in uu yahay hal kaliya waaxid maba tawxis ka oo ah qirista ilaahy.
 shahadah waxey ka mid tahay shanta tiir oo ugu muhiimsan diinta [[Islaam]]ka, waxaana weeye tiirk koowad oo ah shahaadada.
 
 == Akhrinta ==
