--- a/Nuur_Cade.mw
+++ b/Nuur_Cade.mw
@@ -1,4 +1,4 @@
-'''Nuur Hasan Husseen''', loona yaqaano '''Nuur Cadde (Nur Adde)''', ayaa waxaa loo magacaabay raysalwasaaraha [[Soomaaliya]] tariikhda markay ahayd [[Nofeembar]] [[2007]].
+'''Nuur Xasan Xuseen''', loona yaqaano '''Nuur Cadde''', ayaa waxaa loo magacaabay raysalwasaaraha [[Soomaaliya]] tariikhda markay ahayd [[Nofeembar]] [[2007]].
 
 [[Category:Soomaaliya]]
 
