*Empty MediaWiki Message*

--- a/KMG_Soomaaliya.mw
+++ b/KMG_Soomaaliya.mw
@@ -12,7 +12,7 @@
 |leader_title1            = [[President of Somalia|President]]
 |leader_title2            = [[Prime Minister of Somalia|Prime Minister]]
 |leader_name1             = [[Cabdullaahi Yuusuf Axmed]]
-|leader_name2             = [[Nur Hassan Hussein]]
+|leader_name2             = [[Nuur Xasan Xuseen]]
 |capital                  = [[Muqdisho]]
 |latd=2 |latm=02 |latNS=N |longd=45 |longm=21 |longEW=E
 |largest_city             = Magaalo madax
