*Empty MediaWiki Message*

--- a/KMG_Soomaaliya.mw
+++ b/KMG_Soomaaliya.mw
@@ -1,7 +1,7 @@
 {{Infobox Country or territory
 |native_name              = {{lang|so|Jamhuuriyadda Soomaaliya}}<br/>{{rtl-lang|ar|''جمهورية الصومال''}} 
 |conventional_long_name   = ''Somali Republic''
-|common_name              = Somalia
+|common_name              = Soomaaliya
 |image_flag               = Flag of Somalia.svg
 |image_coat               = Coat of arms of Somalia.png
 |image_map                = LocationSomalia.png
@@ -9,8 +9,8 @@
 |national_anthem          = {{lang|so|''Soomaaliyeey Toosoow''}}
 |official_languages       = [[Af Soomaali|Af Soomaali]]<sup>1</sup>
 |government_type          = [[Transitional Federal Government of the Somali Republic|Transitional Federal Government]]
-|leader_title1            = [[President of Somalia|President]]
-|leader_title2            = [[Prime Minister of Somalia|Prime Minister]]
+|leader_title1            = [[President of Somalia|Madaxwayne]]
+|leader_title2            = [[Prime Minister of Somalia|Reesulwasaare]]
 |leader_name1             = [[Cabdullaahi Yuusuf Axmed]]
 |leader_name2             = [[Nuur Xasan Xuseen]]
 |capital                  = [[Muqdisho]]
