*Empty MediaWiki Message*

--- a/KMG_Soomaaliya.mw
+++ b/KMG_Soomaaliya.mw
@@ -10,7 +10,7 @@
 |official_languages       = [[Af Soomaali|Af Soomaali]]<sup>1</sup>
 |government_type          = [[Transitional Federal Government of the Somali Republic|Transitional Federal Government]]
 |leader_title1            = [[President of Somalia|Madaxwayne]]
-|leader_title2            = [[Prime Minister of Somalia|Reesulwasaare]]
+|leader_title2            = [[Prime Minister of Somalia|Raysalwasaare]]
 |leader_name1             = [[Cabdullaahi Yuusuf Axmed]]
 |leader_name2             = [[Nuur Xasan Xuseen]]
 |capital                  = [[Muqdisho]]
