--- a/KMG_Soomaaliya.mw
+++ b/KMG_Soomaaliya.mw
@@ -54,7 +54,7 @@
 |footnote2                = [http://news.bbc.co.uk/2/hi/africa/country_profiles/1072592.stm BBC News country profile]
 }}
 
-'''Soomaaliya''' waa dal dhaca geeska Bari ee [[Qaarad|Qaaradda]] [[Afrika]]. Waa dal ku fadhiya dhul balaaran isla markaasna raadkiisa taariikhda dunida laga heli karo, isagoo hadba magac lagu tilmaamayo, gaar ahaan xilligii [[Fraaciin|Faraaciinta]] iyo [[Rooman|Romaankuba]]. Soomaaliya waxay u qaybsantahay 18 gobol,oo kala ah:
+'''Soomaaliya''' (''Luugada Carabiga'' الصومال) loona yagaano Jamhuuriyadda Soomaaliya waa dal kuyaala geeska bari ee [[Qaarad|Qaaradda]] [[Afrika]]. Waa dal ku fadhiya dhul balaaran isla markaasna raadkiisa taariikhda dunida laga heli karo, isagoo hadba magac lagu tilmaamayo, gaar ahaan xilligii [[Fraaciin|Faraaciinta]] iyo [[Rooman|Romaankuba]]. Soomaaliya waxay u qaybsantahay 18 gobol,oo kala ah:
 *01. [[Awdal]] (Baki) 
 *02. [[Bakool]] (Xudur) 
 *03. [[Banaadir]] ([[Muqdisho]] ama [[Xamar]]) 
