*Empty MediaWiki Message*

--- a/Islaam.mw
+++ b/Islaam.mw
@@ -3,7 +3,7 @@
 [[Image:Kabaa.jpg|thumb|right|220px|Xajka oo kuyaalo sacuudi carabia waxuu ka mid yahay shanta tiir ee islaamka.]]
 == Diinta Islaamka ==
 
-'''Islam''' ([[Luuqada Carabiga|Arabic]]: الإسلام{{Audio|ar-al_islam.ogg|الإسلام; ''al-'islām''}}). Ku dhawaad muslimiinta caalamka oo dhan waxey yihiin  [[sunni]] iyo [[ Shiico]]
+'''Islaam''' ([[Luuqada Carabiga|Carabi]]: الإسلام;). Ku dhawaad muslimiinta caalamka oo dhan waxey yihiin  [[sunni]] iyo [[ Shiico]]
 
 
 Eebbe nasahnaa oo korreeye wuxuu yidhi:-" Waxaa ka cabsada Ilaahay addoomadiisa aqoonta leh, Ilaahayna waa adkaade dambidhaafe ah" Suuradda Faadir qayb ka mid ah aaayadda 28aad. 
