--- a/Kobanhaygan.mw
+++ b/Kobanhaygan.mw
@@ -1,4 +1,4 @@
-[[Image:Politiken building.jpg|thumb|Copenhagen, [[Denmark]]]]
+[[Image:Politiken building.jpg|thumb|Kobanhaygan, [[Denmark]]]]
 
 Waxa wejee magalada madaxa [[denmark]] ijo waxa degan 5 milljo oo dad ahh somali wej dagan jahi.
 
