*Empty MediaWiki Message*

--- a/Jarmal.mw
+++ b/Jarmal.mw
@@ -1,6 +1,6 @@
 [[Image:Europe location GER.png|right|thumbnail|400px|Jarmal]]
 
-Wadan [[Yurub]] ku yaala oo [[faransis]]ka iyo [[denmark]]i xad la wadaaga. Waana wadama aduunka ugu hormarsan marka laga reebo [[japan]] iyo [[Mareykan]].
+Wadan [[Yurub]] ku yaala oo [[faransis]]ka iyo [[denmark]]i xad la wadaaga. Waana wadama aduunka ugu hormarsan marka laga reebo [[jabaan]] iyo [[Mareykan]].
 
 [[Berlin]]
 
