*Empty MediaWiki Message*

--- a/Iswiidhan.mw
+++ b/Iswiidhan.mw
@@ -1,6 +1,6 @@
-[[Image:EU location SWE.png|thumb|Sweden]]
+[[Image:EU location SWE.png|thumb|Isweedhen]]
 
-'''Sweden''' waa waddan ku yaal woqooyiga [[Yurub]].
+'''Isweedhen''' waa waddan ku yaal woqooyiga [[Yurub]].
 
 [[Stockholm]]
 
