*Empty MediaWiki Message*

--- a/Iswiidhan.mw
+++ b/Iswiidhan.mw
@@ -1,6 +1,6 @@
-[[Image:EU location SWE.png|thumb|Isweedhen]]
+[[Image:EU location SWE.png|thumb|Isweedhan]]
 
-'''Isweedhen''' waa waddan ku yaal woqooyiga [[Yurub]].
+'''Isweedhan''' waa waddan ku yaal woqooyiga [[Yurub]].
 
 [[Stockholm]]
 
